--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,10 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "form_legend_clear";
 @import "navbar";
 
 @import "pages/home";
-@import "_jumbotron";
-@import "_cover";
-@import "_banner";
+@import "jumbotron";
