--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -37,31 +37,37 @@
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
 
+<div class="bg-image" style="background-image: url('https://images.unsplash.com/photo-1612219069673-f5f60ebc658f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80');" >
+
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0">Cover</h3>
+      <h3 class="float-md-start mb-0">Capital Distributing</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="#">Partners</a>
+        <a class="nav-link" href="#">Products</a>
+        <a class="nav-link active" aria-current="page" href="#">Education</a>
+        <a class="nav-link" href="#">Employees</a>
+        <a class="nav-link" href="#">Jobs</a>
       </nav>
     </div>
   </header>
 
   <main class="px-3">
-    <h1>Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+    <h1>Moving freight, made easier</h1>
+    <p class="lead"></p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+      <a href="#" class="btn btn-lg btn-secondary fw border-white bg-lightgrey">Learn more</a>
     </p>
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+    <p>© Copyright 2022 Capital Distributing LLC. <br>
+ <a href="https://capitaldist.com/contact" class="text-white">Contact</a><br><a href="https://capitaldist.com/privacy" class="text-white">Privacy Policy</a><br> <a href="https://capitaldist.com/terms" class="text-white">Terms of Use</a>.</p>
   </footer>
 </div>
-
+</div>
 
 
   </body>
