--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -44,12 +44,12 @@
     <div>
       <h3 class="float-md-start mb-0">Capital Distributing</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Partners</a>
-        <a class="nav-link" href="#">Products</a>
-        <a class="nav-link active" aria-current="page" href="#">Education</a>
-        <a class="nav-link" href="#">Employees</a>
-        <a class="nav-link" href="#">Jobs</a>
+        <a class="nav-link active" style="color: white" aria-current="page" href="#">Home</a>
+        <a class="nav-link" style="color: white" href="#">Partners</a>
+        <a class="nav-link" style="color: white" href="#">Products</a>
+        <a class="nav-link active" style="color: white" aria-current="page" href="#">Education</a>
+        <a class="nav-link" style="color: white" href="#">Employees</a>
+        <a class="nav-link" style="color: white" href="#">Jobs</a>
       </nav>
     </div>
   </header>
@@ -58,7 +58,7 @@
     <h1>Moving freight, made easier</h1>
     <p class="lead"></p>
     <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw border-white bg-lightgrey">Learn more</a>
+      <a href="<%= pages_home_path %>" class="btn btn-lg btn-secondary fw border-white bg-lightgrey">Learn more</a>
     </p>
   </main>
 
