--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -42,23 +42,20 @@
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
     <div>
-      <h3 class="float-md-start mb-0">Capital Distributing</h3>
+      <h3 class="float-md-start mb-0"></h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link active" style="color: white" aria-current="page" href="#">Home</a>
         <a class="nav-link" style="color: white" href="#">Partners</a>
-        <a class="nav-link" style="color: white" href="#">Products</a>
-        <a class="nav-link active" style="color: white" aria-current="page" href="#">Education</a>
-        <a class="nav-link" style="color: white" href="#">Employees</a>
         <a class="nav-link" style="color: white" href="#">Jobs</a>
       </nav>
     </div>
   </header>
 
   <main class="px-3">
-    <h1>Moving freight, made easier</h1>
+    <h1>Capital Distributing</h1>
     <p class="lead"></p>
     <p class="lead">
-      <a href="<%= pages_home_path %>" class="btn btn-lg btn-secondary fw border-white bg-lightgrey">Learn more</a>
+      <a href="<%= products_index_path %>" class="btn btn-lg btn-secondary fw border-white bg-lightgrey">Products</a>
     </p>
   </main>
 
