changed navbar heading and working on images in product page. for tomorrow will be seeding out products, working on images  then  good to go

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -37,7 +37,7 @@
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
 
-<div class="bg-image" style="background-image: url('https://images.unsplash.com/photo-1612219069673-f5f60ebc658f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80');" >
+<div class="image-responsive" style="background-image: url('https://images.unsplash.com/photo-1612219069673-f5f60ebc658f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80');" >
 
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
