--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -58,8 +58,7 @@
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
       <a href="#" class="navbar-brand d-flex align-items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
-        <strong>Album</strong>
+        <strong>Capital Distributing</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -240,7 +239,7 @@
 </main>
 
 <footer class="text-muted py-5">
-  <div class="container justify-content-center">
+  <div class="container">
       <footer class="mt-auto text-grey-50">
     <p>© Copyright 2022 Capital Distributing LLC. <br>
  <a href="https://capitaldist.com/contact" class="text-grey">Contact</a><br><a href="https://capitaldist.com/privacy" class="text-grey">Privacy Policy</a><br> <a href="https://capitaldist.com/terms" class="text-grey">Terms of Use</a>.</p>
