adding images to seed products.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -88,10 +88,9 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
             <div class="card-body">
-              <p class="card-text">Abita Amber<br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
+              <p class="card-text">Abita Amber<br>Availabilty: Year Round<br>Style: Lager/Pilsner <br>Category: Craft <br> ABV: 4.5%<br> IBU: 17<br> Hops: German Perle</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -104,7 +103,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
 
             <div class="card-body">
               <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
