--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -103,8 +103,53 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://capitaldist.com/sites/default/files/styles/medium/public/2018-07/Abita-Andygator-135-135-crop.png?itok=SUnsMI1W'>
+            <div class="card-body">
+              <p class="card-text">Abita Andygator<br>Availabilty: Year Round<br>Style: Lager/Pilsner<br>Category: Craft <br> ABV: 8.0% <br> IBU: 25<br> Hops: German Perle</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Add</button>
+                </div>
+                <small class="text-muted"></small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://capitaldist.com/sites/default/files/styles/medium/public/2018-07/Abita-Root-Beer-135-135-crop.png?itok=bdkrmDH2'>
+            <div class="card-body">
+              <p class="card-text">Abita Bayou BTLGR Hard Rootbeer<br>Availabilty: Year Round<br>Style: Other <br>Category: Craft <br> ABV: 5.9% </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Add</button>
+                </div>
+                <small class="text-muted"></small>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card shadow-sm">
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://capitaldist.com/sites/default/files/styles/medium/public/2018-10/coors-banquet_0.png?itok=rr8TpZ8g'>
+            <div class="card-body">
+              <p class="card-text"><br>Availabilty: Year Round<br>Style: Lager/Pilsner <br>Category: Domestic<br> ABV: 5.0%<br> IBU: 6 <br> Hops: Chinook, Hallertau, Taurus </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary">Add</button>
+                </div>
+                <small class="text-muted"></small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
             <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
-
             <div class="card-body">
               <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
               <div class="d-flex justify-content-between align-items-center">
@@ -119,57 +164,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Add</button>
-                </div>
-                <small class="text-muted"></small>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Add</button>
-                </div>
-                <small class="text-muted"></small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Add</button>
-                </div>
-                <small class="text-muted"></small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
             <div class="card-body">
               <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
               <div class="d-flex justify-content-between align-items-center">
@@ -185,8 +180,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
             <div class="card-body">
               <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
               <div class="d-flex justify-content-between align-items-center">
@@ -201,8 +195,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
             <div class="card-body">
               <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
               <div class="d-flex justify-content-between align-items-center">
@@ -217,8 +210,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
             <div class="card-body">
               <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
               <div class="d-flex justify-content-between align-items-center">
