cards images uploaded now changing format

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -136,7 +136,7 @@
           <div class="card shadow-sm">
             <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://capitaldist.com/sites/default/files/styles/medium/public/2018-10/coors-banquet_0.png?itok=rr8TpZ8g'>
             <div class="card-body">
-              <p class="card-text"><br>Availabilty: Year Round<br>Style: Lager/Pilsner <br>Category: Domestic<br> ABV: 5.0%<br> IBU: 6 <br> Hops: Chinook, Hallertau, Taurus </p>
+              <p class="card-text">Coors Banquet<br>Availabilty: Year Round<br>Style: Lager/Pilsner <br>Category: Domestic<br> ABV: 5.0%<br> IBU: 6 <br> Hops: Chinook, Hallertau, Taurus </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -149,9 +149,9 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://capitaldist.com/sites/default/files/styles/medium/public/2018-10/coors-light.png?itok=NzqiewdR'>
             <div class="card-body">
-              <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
+              <p class="card-text">Coors Light<br>Availabilty: Year Round<br>Style: Lager/Pilsner<br>Category: Domestic<br> ABV: 4.5%</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -164,9 +164,9 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://capitaldist.com/sites/default/files/styles/medium/public/2018-10/MillerGenuineDraft.png?itok=UHSSsV1A'>
             <div class="card-body">
-              <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
+              <p class="card-text">Miller Gernuine Draft<br>Availabilty: Year Round<br>Style: Lager/Pilsner <br>Category: Domestic <br> ABV: 4.7%<br> Hops: Hops and Hop Extract</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -180,9 +180,9 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://capitaldist.com/sites/default/files/styles/medium/public/2018-10/MillerLite.png?itok=Z4qmR_vw'>
             <div class="card-body">
-              <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
+              <p class="card-text">Miller Lite<br>Availabilty: Year Round<br>Style: Lager/Pilsner <br>Category: Domestic <br> ABV: 4.2%</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -195,9 +195,9 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.Ghd65o2uTgaREjlep3T-8QHaHa%26pid%3DApi&f=1'>
+            <img class="bd-placeholder-img card-img-top img-responsive" width='100%' height='224' src='https://capitaldist.com/sites/default/files/styles/medium/public/2018-10/Miller64.png?itok=1VAecY_2'>
             <div class="card-body">
-              <p class="card-text"><br>Availabilty: Year Round<br>Style: <br>Category: <br> ABV: <br> IBU: <br> Hops: </p>
+              <p class="card-text">Miller64<br>Availabilty: Year Round<br>Style: Lager/Pilsner <br>Category: Domestic <br> ABV: 3.0% </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
