--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,8 +62,8 @@
       <div class="col-md-6">
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Partners</h2>
-          <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-          <button class="btn btn-outline-secondary" type="button">Example button</button>
+          <p>Check out who are partners are, how we serve them, and how we can serve you.</p>
+          <button class="btn btn-outline-secondary" type="button">See partners</button>
         </div>
       </div>
     </div>
