added home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -53,17 +53,31 @@
 
     <div class="row align-items-md-stretch">
       <div class="col-md-6">
-        <div class="h-100 p-5 text-white bg-dark rounded-3">
+        <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Products</h2>
           <p>Explore our stock and let us know how we can best serve your business' needs.</p>
-          <button class="btn btn-outline-light" type="button">See Products</button>
+           <a href="<%= products_index_path %>" class="btn btn-outline-secondary">See Products</a>
         </div>
       </div>
       <div class="col-md-6">
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Partners</h2>
           <p>Check out who are partners are, how we serve them, and how we can serve you.</p>
-          <button class="btn btn-outline-secondary" type="button">See partners</button>
+           <a href="#" class="btn btn-outline-secondary">See Partners</a>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="h-100 p-5 bg-light border rounded-3">
+          <h2>Team</h2>
+          <p>Check out who are partners are, how we serve them, and how we can serve you.</p>
+           <a href="#" class="btn btn-outline-secondary">See Team</a>
+        </div>
+      </div>
+       <div class="col-md-6">
+        <div class="h-100 p-5 bg-light border rounded-3">
+          <h2>Location</h2>
+          <p>Here's our location on a map. Home Office is located in the center of Oklahoma City where I-40 and I-44 intersect.</p>
+           <a href="<%= products_index_path %>" class="btn btn-outline-secondary">See Location</a>
         </div>
       </div>
     </div>
