--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -70,7 +70,7 @@
         <div class="h-100 p-5 bg-light border rounded-3">
           <h2>Team</h2>
           <p>Check out who are partners are, how we serve them, and how we can serve you.</p>
-           <a href="#" class="btn btn-outline-secondary">See Team</a>
+           <a href="<%= pages_team_path %>" class="btn btn-outline-secondary">See Team</a>
         </div>
       </div>
        <div class="col-md-6">
