--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -59,7 +59,7 @@
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>© Copyright 2022 Capital Distributing LLC. <br>
+    <p>© Copyright 2022 Capital Distributing L.L.C. <br>
  <a href="https://capitaldist.com/contact" class="text-white">Contact</a><br><a href="https://capitaldist.com/privacy" class="text-white">Privacy Policy</a><br> <a href="https://capitaldist.com/terms" class="text-white">Terms of Use</a>.</p>
   </footer>
 </div>
